--- a/loginInterface/signup.html
+++ b/loginInterface/signup.html
@@ -37,13 +37,13 @@
 
                 <div class="form-group">
                     <div class="button-container">
-                        <input type="submit" class="form-control sign-btn" value="Sign up">
+                        <input type="submit" class="form-control sign-btn" value="Sign up"><br><br>
                         <span class="loading-text" style="display: none;">Loading...</span>
                     </div>
                 </div>
 
                 <div class="sign-in">
-                    <span>already have an account?</span>
+                    <span>Already have an account?</span>
                     <input type="button" class="signin-btn" value="Sign in" onclick="window.location.href='./index.html';">
                 </div>
             </form>
