--- a/loginInterface/index.html
+++ b/loginInterface/index.html
@@ -38,7 +38,7 @@
                 </div>
 
                 <div class="form-group">
-                    <input type="submit" class="form-control sign-btn" value="sign in"><br><br>
+                    <input type="submit" class="form-control sign-btn" value="Sign in"><br><br>
                 </div>
 
                 <div class="sign-up">
