--- a/navpage2/navpage2.html
+++ b/navpage2/navpage2.html
@@ -105,9 +105,9 @@
                 <h3>Goal: </h3>
                 <p>Through interactive Q&A, let users learn environmental protection knowledge.</p><br>
                 <h3>Method: </h3>
-                <p>After the user clicks "Start quiz", the system randomly selects 5 questions related to environmental protection, and after the user completes the test, all pairs can be rewarded.</p><br>
+                <p>After the user clicks "Start Quiz", the system randomly selects 5 questions related to environmental protection, and after the user completes the test, all pairs can be rewarded.</p><br>
                 <h3>Rewards: </h3>
-                <p>Answer 5 questions correctly and get 25points.</p>
+                <p>Answer 5 questions correctly and get 25 points.</p>
             </div>
         </div>
         <div id="recycling-modal" class="modal">
